syntax = "proto3";

package mail;

option go_package = "./proto";


service Mail {
    rpc SendMail (MailRequest) returns (MailReply) {}
}

message MailRequest {
    string email = 1;
    string message = 2;
}

message MailReply {
    int32 status = 1;
    string message = 2;
}

